[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://prefabs/UI/BaseSignalButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/components/frame/Frame_StageFrame_Extra.png" type="Texture" id=3]
[ext_resource path="res://scripts/UI/elements/LevelTile.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/components/frame/Frame_StageFrame.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/components/frame/Frame_StageFrame_Disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/components/frame/Frame_StageFrame_Selected.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/components/frame/Frame_StageFrame_Glow.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 102
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="LevelTile" instance=ExtResource( 2 )]
margin_right = 213.0
margin_bottom = 245.0
rect_min_size = Vector2( 215, 247 )
script = ExtResource( 4 )
is_extra = false
is_active = false

[node name="Texture" parent="." index="0"]
visible = false
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -123.5
margin_right = 215.0
margin_bottom = 123.5
rect_pivot_offset = Vector2( 107, 123 )
texture = ExtResource( 5 )
patch_margin_left = 0
patch_margin_top = 0
patch_margin_right = 0
patch_margin_bottom = 0

[node name="TextureDisabled" type="TextureRect" parent="." index="1"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -123.5
margin_right = 215.0
margin_bottom = 123.5
rect_pivot_offset = Vector2( 107, 123 )
texture = ExtResource( 6 )

[node name="TextureSelected" type="TextureRect" parent="." index="2"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -122.5
margin_right = 213.0
margin_bottom = 122.5
rect_pivot_offset = Vector2( 107, 123 )
texture = ExtResource( 7 )

[node name="TextureExtra" type="TextureRect" parent="." index="3"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -125.0
margin_right = 213.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 107, 123 )
texture = ExtResource( 3 )

[node name="Glow" type="TextureRect" parent="." index="4"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -211.0
margin_right = 309.0
margin_bottom = 211.0
texture = ExtResource( 8 )

[node name="NumberLabel" type="Label" parent="." index="5"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 88.0
margin_top = -75.0
margin_right = 129.0
margin_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
